--- a/app/src/main/res/layout/about_settings.xml
+++ b/app/src/main/res/layout/about_settings.xml
@@ -53,8 +53,8 @@
             android:focusable="true"
             android:minHeight="0dp"
             android:padding="8dp"
-            android:text="更新"
             android:textSize="14sp"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/version" />
