--- a/app/src/main/res/layout/about_settings.xml
+++ b/app/src/main/res/layout/about_settings.xml
@@ -30,7 +30,7 @@
         tools:showIn="@layout/history_settings">
 
         <TextView
-            android:id="@+id/version"
+            android:id="@+id/versionText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -57,10 +57,10 @@
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/version" />
+            app:layout_constraintTop_toBottomOf="@+id/versionText" />
 
         <TextView
-            android:id="@+id/aboutText"
+            android:id="@+id/aboutTextView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
